Fix header overflow

--- a/ckanext/requestdata/fanstatic/css/main.css
+++ b/ckanext/requestdata/fanstatic/css/main.css
@@ -162,7 +162,7 @@
     font-size: 16px;
     position: absolute;
     top: 36px;
-    left: 116px;
+    left: 300px;
 }
 .total-requests-filter {
   margin-right: 20px;
